# rust-wasm-ts-ingester

./: .gitignore  Cargo.toml  README.md  arch.d2
common/: Cargo.toml
common/src/: lib.rs
hello-wasm/: .justfile  Cargo.toml  index.html  index.js  index.ts  package-lock.json  package.json  webpack.config.cjs  webpack.config.js
hello-wasm/src/: .lib.rs.swp  lib.rs  v1.rs  v2.rs
hello-wasm/tests/: web.rs
src/: main.rs
web/: .justfile  Cargo.toml
web/src/: main.rs
