[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Igor Tonkopryadchenko <gtonky@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
base64 = "0.21.4"
chrono = { version = "0.4.31", features = ["serde"] }
rmp-serde = "1.1.2"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
thiserror = "1.0.48"
web-sys = { version = "0.3.64", features = ["console"] }
common = { path = "../common" }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

# [profile.release]
# Tell `rustc` to optimize for small code size.
# opt-level = "s"
# lto = true

